--- a/assets/minecraft/lang/en_pt.json
+++ b/assets/minecraft/lang/en_pt.json
@@ -3404,7 +3404,7 @@
     "item.minecraft.mule_spawn_egg": "Mule Cackle Fruit",
     "item.minecraft.mushroom_stew": "Shroom goulash",
     "item.minecraft.music_disc_11": "Shanty",
-    "item.minecraft.music_disc_11.desc": "C418 - 11",
+    "item.minecraft.music_disc_11.desc": "Sonny Clark Trio - Softly, as in a Mornin' Sunrise",
     "item.minecraft.music_disc_13": "Shanty",
     "item.minecraft.music_disc_13.desc": "a-harrr - Take On Me",
     "item.minecraft.music_disc_blocks": "Shanty",
@@ -3426,7 +3426,7 @@
     "item.minecraft.music_disc_strad": "Shanty",
     "item.minecraft.music_disc_strad.desc": "Monsters Inc Shanty (Bass Boosted)",
     "item.minecraft.music_disc_wait": "Shanty",
-    "item.minecraft.music_disc_wait.desc": "C418 - wait",
+    "item.minecraft.music_disc_wait.desc": "Jimmy Sax - No Matey No Cry",
     "item.minecraft.music_disc_ward": "Shanty",
     "item.minecraft.music_disc_ward.desc": "The Script - Hall o' Renown",
     "item.minecraft.mutton": "Raw Meat o' Sheep",
