--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1878,8 +1878,8 @@
   "item.minecraft.music_disc_stal.desc": "Disturbed - Sound of Silence",
   "item.minecraft.music_disc_strad.desc": "Monsters Inc Theme (Bass Boosted)",
   "item.minecraft.music_disc_ward.desc": "The Script - Hall of Fame",
-  "item.minecraft.music_disc_11.desc": "C418 - 11",
-  "item.minecraft.music_disc_wait.desc": "C418 - wait",
+  "item.minecraft.music_disc_11.desc": "Sonny Clark Trio - Softly, as in a Morning Sunrise",
+  "item.minecraft.music_disc_wait.desc": "Jimmy Sax - No Man No Cry",
   "item.minecraft.music_disc_pigstep.desc": "Lena Raine - Pigstep",
   "item.minecraft.bone": "Bone",
   "item.minecraft.ink_sac": "Ink Sac",
