--- a/assets/minecraft/lang/lol_us.json
+++ b/assets/minecraft/lang/lol_us.json
@@ -3404,7 +3404,7 @@
     "item.minecraft.mule_spawn_egg": "Mewl spon ec",
     "item.minecraft.mushroom_stew": "A supe of funges",
     "item.minecraft.music_disc_11": "Round loud thing",
-    "item.minecraft.music_disc_11.desc": "C418 - 11",
+    "item.minecraft.music_disc_11.desc": "Sonny Clark Trio - Softly, az in Morning Sunrize",
     "item.minecraft.music_disc_13": "Round loud thing",
     "item.minecraft.music_disc_13.desc": "a-ha - Taek On Me plz",
     "item.minecraft.music_disc_blocks": "Round loud thing",
@@ -3426,7 +3426,7 @@
     "item.minecraft.music_disc_strad": "Round loud thing",
     "item.minecraft.music_disc_strad.desc": "Monsters Inc Theme (Bas Boostd)",
     "item.minecraft.music_disc_wait": "Round loud thing",
-    "item.minecraft.music_disc_wait.desc": "C418 - wait",
+    "item.minecraft.music_disc_wait.desc": "Jimmy Sax - No Man No Cry",
     "item.minecraft.music_disc_ward": "Round loud thing",
     "item.minecraft.music_disc_ward.desc": "Teh Script - Hall ov Fame",
     "item.minecraft.mutton": "Bloody Mutn",
